# rusholve

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  publish.yml  release.yml
nix/lib/: default.nix  writeResolvedShellApplication.nix
src/: lib.rs  main.rs
src/cli/: args.rs  check.rs  mod.rs  resolve.rs  run.rs
src/diag/: json.rs  mod.rs  suggest.rs
src/directives/: apply.rs  mod.rs  parse.rs
src/frontend/: bash.rs  mod.rs
src/ir/: command.rs  mod.rs  source.rs  span.rs  visitor.rs  word.rs
src/lore/: mod.rs
src/resolver/: auto_skip.rs  classify.rs  execers.rs  inputs.rs  magic_vars.rs  mod.rs  solution.rs  varsub.rs
src/rewriter/: mod.rs
src/safety/: ast_scan.rs  mod.rs  token_scan.rs
tests/: cli.rs  safety_corpus.rs
tests/fixtures/unsupported/: coproc.sh  disown.sh  locale_quoted.sh  logout.sh  select.sh
