[package]
name = "rusholve"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
description = "A clean-slate Rust port of resholve: shell-script command-reference resolver/rewriter for Nix"
license = "MIT"
repository = "https://github.com/qweered/rusholve"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["shell", "bash", "nix", "resolver", "rewriter"]

[lib]
name = "rusholve"
path = "src/lib.rs"

[[bin]]
name = "rusholve"
path = "src/main.rs"

[dependencies]
brush-parser = "=0.4"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ariadne = "0.4"
thiserror = "1"
walkdir = "2"
csv = "1"
regex = "1"

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
